update gdsc micro

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         <li><a href="#home">首頁</a></li>
         <li><a href="#skill">技術</a></li>
         <li><a href="#graduation">解謎遊戲</a></li>
+        <li><a href="#micro">雲原生</a></li>
         <li><a href="#portfolio">實習-專業文章</a></li>
         <li><a href="#swine">實習-優豬可尋</a></li>
+        <li><a href="#gdsc">社群經營</a></li>
         <li><a href="#contact">聯絡我</a></li>
+        <li><a href="https://www.instagram.com/cherieins12/" target="_blank"><img src="./img/icon/instagram.png" alt="ig" style="width: 20px; height: 20px;"></a></li>
       </ul>
     </nav>
   </header>
@@ -193,12 +196,26 @@
     </div>
   </section>
 
-  <section id="portfolio">
-    <h2>擔任實習小編-必能專業文章</h2>
-    <p>我在這個網站負責將作者寫好的文章整理排版並且繪製圖片，最後上架到網站中</p>
-    <div class="container" id="gallery">
-      <!-- JS 會自動插入內容 -->
-    </div>
+  <section id="micro">
+    <h2>雙主修資工系-改善雲原生環境自動縮放機制</h2>
+    <div class="container">
+
+      <div class="carousel-container">
+        <div class="carousel-slide" id="carousel-slide">
+          <img src="./img/micro/1-1-01.png" alt="1">
+          <img src="./img/micro/2-02.png" alt="2">
+          <img src="./img/micro/n4-04.png" alt="3">
+          <img src="./img/micro/5-05.png" alt="4">
+          <img src="./img/micro/new-06.png" alt="5">
+          <img src="./img/micro/7-07.png" alt="6">
+          <img src="./img/micro/new-08.png" alt="7">
+          <img src="./img/micro/new-09.png" alt="8">
+        </div>
+        <button class="prev" onclick="prevSlide()">‹</button>
+        <button class="next" onclick="nextSlide()">›</button>
+        <div class="dots" id="dots"></div>
+      </div>
+
   </section>
 
   <section id="swine">
@@ -243,14 +260,58 @@
     </div>
   </section>
 
+  <section id="portfolio">
+    <div class="title">
+      <h2>擔任實習小編-必能專業文章</h2>
+      <p>我在這個網站負責將作者寫好的文章整理排版並且繪製圖片，最後上架到網站中</p>
+    </div>
+
+    <div class="container" id="gallery">
+      <!-- JS 會自動插入內容 -->
+    </div>
+  </section>
+
+  <section id="gdsc">
+    <h2>社群經營-Google Developer School Clubs</h2>
+    <p>我在社群擔任的角色是社群小編</p>
+    <button class="shadow__btn"
+      onclick="window.open('https://www.instagram.com/gdsc_ntcu/profilecard/?igsh=cnU1b3hpenZnOWsx', '_blank')">
+
+      Click here to GDSC!
+    </button>
+    <div class="container">
+      <div class="image-grid">
+        <div class="grid-item"><img src="./img/gdsc/20230903-05.png" alt="Image 1"></div>
+        <div class="grid-item"><img src="./img/gdsc/20230903-06.png" alt="Image 2"></div>
+        <div class="grid-item"><img src="./img/gdsc/cloud_工作區域 1.jpg" alt="Image 3"></div>
+        <div class="grid-item"><img src="./img/gdsc/golang.gif" alt="Image 4"></div>
+        <div class="grid-item"><img src="./img/gdsc/jam.jpg" alt="Image 5"></div>
+        <div class="grid-item"><img src="./img/gdsc/Logoanimation_工作區域 1.jpg" alt="Image 6"></div>
+        <div class="grid-item"><img src="./img/gdsc/photo-output.jpg" alt="Image 7"></div>
+        <div class="grid-item"><img src="./img/gdsc/封面_新.png" alt="Image 8"></div>
+        <div class="grid-item"><img src="./img/gdsc/小聚.png" alt="Image 9"></div>
+      </div>
+
+    </div>
+  </section>
+
+
   <section id="contact">
     <h2>聯絡我</h2>
-    <form>
-      <input type="text" placeholder="姓名" required>
-      <input type="email" placeholder="電子郵件" required>
-      <textarea placeholder="您的訊息" required></textarea>
-      <button type="submit">送出</button>
-    </form>
+    <div class="container">
+      
+      <div class="contact-left">
+        <p><b>Phone:</b>0902230572</p>
+        <p><b>Mail:</b>cheriekang5@gmail.com</p>
+        <p><b>Line ID:</b>0902230572</p>
+      </div>
+      <div class="contact-right">
+        <span>謝謝您看到最後~<br>Thanks for waching.</span>
+      </div>
+
+
+    </div>
+
   </section>
 
 </body>
