update index css

--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="#home">首頁</a></li>
-        <li><a href="#skill">技術</a></li>
-        <li><a href="#graduation">解謎遊戲</a></li>
-        <li><a href="#micro">雲原生</a></li>
-        <li><a href="#portfolio">實習-專業文章</a></li>
-        <li><a href="#swine">實習-優豬可尋</a></li>
-        <li><a href="#gdsc">社群經營</a></li>
-        <li><a href="#contact">聯絡我</a></li>
-        <li><a href="https://www.instagram.com/cherieins12/" target="_blank"><img src="./img/icon/instagram.png" alt="ig" style="width: 20px; height: 20px;"></a></li>
-      </ul>
+      <div class="nav-container">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+          <span></span>
+        </label>
+    
+        <ul class="nav-menu">
+          <li><a href="#home">首頁</a></li>
+          <li><a href="#skill">技術</a></li>
+          <li><a href="#graduation">解謎遊戲</a></li>
+          <li><a href="#micro">雲原生</a></li>
+          <li><a href="#portfolio">文章</a></li>
+          <li><a href="#swine">優豬可尋</a></li>
+          <li><a href="#gdsc">社群經營</a></li>
+          <li><a href="#contact">聯絡我</a></li>
+          <li>
+            <a href="https://www.instagram.com/cherieins12/" target="_blank">
+              <img src="./img/icon/instagram.png" alt="ig" style="width: 20px; height: 20px;">
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
+    
   </header>
 
   <section id="home">
@@ -31,7 +43,8 @@
       <div class="home-text">
         <h1>康培筠</h1>
         <h5>Cherie Kang</h5>
-        <p>這是一個展示我作品的一頁式網站</p>
+        <p>國立臺中教育大學</p>
+        <p>數位內容科技學系<br/>雙主修資訊工程學系</p>
 
         <div class="cursor-selector">
           <div class="cursor-button">
