--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
 
         <div class="cursor-grid">
-          <img src="./img/cursor image/cursor.png" alt="預設" data-cursor="default" class="cursor-option selected">
-          <img src="./img/cursor image/innovation.png" alt="愛心" data-cursor="heart" class="cursor-option">
-          <img src="./img/cursor image/almonds.png" alt="星星" data-cursor="star" class="cursor-option">
-          <img src="./img/cursor image/onion (1).png" alt="筆刷" data-cursor="pen" class="cursor-option">
+          <img src="./img/cursor image/cursor (2).png" alt="預設" data-cursor="default" class="cursor-option selected">
+          <img src="./img/cursor image/bear.png" alt="愛心" data-cursor="heart" class="cursor-option">
+          <img src="./img/cursor image/pawprint.png" alt="星星" data-cursor="star" class="cursor-option">
+          <img src="./img/cursor image/pig.png" alt="筆刷" data-cursor="pen" class="cursor-option">
         </div>
       </div>
       <div class="home-image">
@@ -126,7 +126,7 @@
       <p>以阿茲海默症病患視角設計解謎遊戲，透過遊戲機制與劇情呈現病患面臨的困境與家屬的無奈，喚起大眾共鳴</p>
       <p>我負責的項目:遊戲機制設計 遊戲程式</p>
       <button class="github-button"
-        onclick="window.open('https://github.com/yunyouyunyo/Puzzle-Game-ShiGuang.git', '_blank')">
+        onclick="window.open('https://github.com/yunyouyunyo/Puzzle-game-script', '_blank')">
         <span class="btn-txt">前往我的 GitHub</span>
       </button>
 
@@ -307,6 +307,7 @@
 
     </div>
   </section>
+
 
 
   <section id="contact">
