school work update

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           <li><a href="#skill">技術</a></li>
           <li><a href="#graduation">解謎遊戲</a></li>
           <li><a href="#micro">雲原生</a></li>
-          <li><a href="#portfolio">文章</a></li>
+          <li><a href="#schoolwork">學校作品</a></li>
           <li><a href="#swine">優豬可尋</a></li>
+          <li><a href="#portfolio">文章</a></li>
           <li><a href="#gdsc">社群經營</a></li>
           <li><a href="#contact">聯絡我</a></li>
           <li>
@@ -252,6 +253,67 @@
 
   </section>
 
+  <section id="schoolwork">
+    <div class="container">
+      <div class="title">
+        <h2>學校作品集</h2>
+      </div>
+      <div class="block">
+        <div class="text">
+          <h2>Logo設計-哈party</h2>
+          <p>當時是為一個負責辦Party的廠商設計Logo，理念是歡樂﹑幸福，所以用哈(Ha)作為我們的核心，派對帽為點綴，盡量以圓弧的線條讓整體設計更有彈性，最後在套上mockup呈現實體效果。</p>
+          <p id="eng">At the time, I designed a logo for a company responsible for organizing parties. The concept
+            centered
+            around joy and happiness, so we used "Ha" as our core element. A party hat was added as an accent, and we
+            incorporated curved lines to give the overall design a more flexible and lively feel. Finally, we applied
+            the design to a mockup to present its real-world effect.</p>
+        </div>
+        <div class="gallery gallery-horizontal">
+          <div class="main-image main-image-horizontal">
+            <img id="main-img-horizontal" src="./img/schoolwork/哈party-04.jpg" alt="Main">
+          </div>
+          <div class="thumbnails thumbnails-horizontal">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/哈party-04.jpg" alt="b">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/哈party-05.jpg" alt="a">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/哈party-08.jpg" alt="c">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/mockup2-08.jpg" alt="d">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/mockup2-15.jpg" alt="e">
+            <img class="thumb thumb-horizontal" src="./img/schoolwork/mockup2-35.jpg" alt="f">
+          </div>
+        </div>
+      </div>
+
+      <div class="block">
+        <div class="gallery-vertical">
+          <div class="main-image-vertical">
+            <img id="main-img-vertical" src="./img/mrt/1.png" alt="Main">
+          </div>
+          <div class="thumbnails-vertical">
+            <img class="thumb-vertical active" src="./img/mrt/1.png" alt="b">
+            <img class="thumb-vertical" src="./img/mrt/2.png" alt="b">
+            <img class="thumb-vertical" src="./img/mrt/3.png" alt="a">
+            <img class="thumb-vertical" src="./img/mrt/4.png" alt="c">
+            <img class="thumb-vertical" src="./img/mrt/yellow.png" alt="d">
+          </div>
+
+        </div>
+
+        <div class="text">
+          <h2>2023 捷運黑客松 UI/UX設計賽</h2>
+          <p>我們的設計理念著重於「簡單」與「清晰」。針對過去較為複雜的設計，我們保留了必要的元素，捨棄多餘的部分，並重新打造 UI 與
+            UX，讓使用者在第一次使用時就能輕鬆上手。整體風格採用復古配色，並清楚標示各條捷運線的顏色，方便使用者一眼辨識。</p>
+          <p id="eng"> Our design philosophy emphasizes simplicity and clarity. We refined the previously complex layout
+            by keeping only the essential elements and removing any unnecessary components. The UI and UX were
+            completely redesigned to ensure users can intuitively navigate the system from their very first interaction.
+            In terms of style, we adopted a retro color palette and clearly marked each metro line with its
+            corresponding color, making it easy to recognize at a glance.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
   <section id="swine">
     <div class="container">
       <h2>擔任實習小編-優豬可尋</h2>
@@ -305,15 +367,7 @@
     </div>
   </section>
 
-<section id="schoolwork">
-  <div class="container">
-    <div class="title">
-      <h2>學校作品集</h2>
-    </div>
 
-    <div class=""></div>
-    </div>
-</section>
 
   <section id="gdsc">
     <h2>社群經營-Google Developer School Clubs</h2>
