--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>康培筠</h1>
         <h5>Cherie Kang</h5>
         <p>國立臺中教育大學</p>
-        <p>數位內容科技學系<br />雙主修資訊工程學系</p>
+        <p>雙主修資訊工程學系<br />數位內容科技學系</p>
 
         <div class="cursor-selector">
           <div class="cursor-button">
