Update club name from GDSC to GDSC

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 
   <section id="gdsc">
-    <h2>社群經營-Google Developer School Clubs</h2>
+    <h2>社群經營-Google Developer Student Clubs</h2>
     <p>我在社群擔任的角色是社群小編</p>
     <button class="shadow__btn"
       onclick="window.open('https://www.instagram.com/gdsc_ntcu/profilecard/?igsh=cnU1b3hpenZnOWsx', '_blank')">
